2 file index-style

--- a/website/index.html
+++ b/website/index.html
@@ -8,15 +8,18 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#">Trang chủ</a></li>
-                <li><a href="#">Giới thiệu</a></li>
-                <li><a href="#">Kỹ năng</a></li>
-                <li><a href="#">Dự án</a></li>
-                <li><a href="#">Liên hệ</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Giới thiệu về TÔI</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Trang chủ</a></li>
+                    <li><a href="#">Giới thiệu</a></li>
+                    <li><a href="#">Kỹ năng</a></li>
+                    <li><a href="#">Dự án</a></li>
+                    <li><a href="#">Liên hệ</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <section class="intro">
@@ -24,14 +27,51 @@
             <img src="../website/images/OIP.jpg" alt="Ảnh cá nhân">
         </div>
         <div class="details">
-            <h1>Chào bạn, tôi là [Tên của bạn]</h1>
-            <p>Tôi là một chuyên gia [nghề nghiệp của bạn], với nhiều năm kinh nghiệm trong ngành. Tôi chuyên về các lĩnh vực như [liệt kê kỹ năng của bạn].</p>
-            <p>Với đam mê và sự sáng tạo, tôi luôn tìm kiếm cơ hội để phát triển và đóng góp cho các dự án thú vị.</p>
+            <h2>Chào bạn, tôi là Lê Huỳnh Đức</h2>
+            <p>Tôi là sinh viên năm tư ngành Công nghệ thông tin, lớp 21DTHE5 tại trường Đại học HUTECH.</p>
+            <p>Với đam mê lập trình và phát triển phần mềm, tôi luôn tìm kiếm cơ hội để học hỏi và áp dụng kiến thức vào các dự án thực tế.</p>
         </div>
     </section>
 
+    <section class="skills">
+        <h2>Kỹ năng cá nhân</h2>
+        <ul>
+            <li><strong>Ngôn ngữ lập trình:</strong> Java, Python, JavaScript, PHP</li>
+            <li><strong>Web development:</strong> HTML, CSS, JavaScript, ReactJS, Node.js</li>
+            <li><strong>Quản lý cơ sở dữ liệu:</strong> MySQL, MongoDB</li>
+            <li><strong>Frameworks:</strong> Spring, Express.js</li>
+            <li><strong>Công cụ phát triển:</strong> Git, Docker, Visual Studio Code, IntelliJ IDEA</li>
+            <li><strong>Phát triển phần mềm:</strong> Agile, Scrum</li>
+            <li><strong>Kỹ năng giải quyết vấn đề:</strong> Phân tích và giải quyết vấn đề logic, tối ưu hóa thuật toán</li>
+        </ul>
+    </section>
+
+    <section class="projects">
+        <h2>Đồ án tôi đã thực hiện</h2>
+        <div class="project-list">
+            <div class="project">
+                <h3>Đồ án 1: Quản lý thư viện</h3>
+                <p>Ứng dụng quản lý thông tin sách, mượn trả sách, và báo cáo thống kê dành cho các thư viện. Được xây dựng với ngôn ngữ Java và cơ sở dữ liệu MySQL.</p>
+            </div>
+            <div class="project">
+                <h3>Đồ án 2: Hệ thống bán hàng trực tuyến</h3>
+                <p>Hệ thống bán hàng trực tuyến với các tính năng giỏ hàng, thanh toán và quản lý kho. Được phát triển bằng PHP và MySQL, tích hợp với các công cụ thanh toán trực tuyến.</p>
+            </div>
+            <div class="project">
+                <h3>Đồ án 3: Ứng dụng quản lý công việc</h3>
+                <p>Ứng dụng giúp người dùng quản lý các công việc, lên kế hoạch và theo dõi tiến độ. Được xây dựng bằng ReactJS và Firebase cho phần backend.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact">
+        <h2>Thông tin liên hệ</h2>
+        <p>Địa chỉ: TP Thủ Đức, TP HCM</p>
+        <p>Email: <a href="mailto:ducle1602@gmail.com">ducle1602@gmail.com</a></p>
+    </section>
+
     <footer>
-        <p>&copy; 2025 [Tên của bạn]. Tất cả quyền lợi được bảo lưu.</p>
+        <p>&copy; 2025 Lê Huỳnh Đức. Tất cả quyền lợi được bảo lưu.</p>
     </footer>
 </body>
 </html>
